--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
 
         <li class="relative"><a href="about.html" class="menu-item">About Us</a></li>
-        <!-- <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li> -->
+        <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li>
         <li class="relative"><a href="coming-soon.html" class="menu-item">Certification</a></li>
         <!-- <li class="relative"><a href="page-contact.html" class="menu-item">Contact</a></li> -->
       </ul>
@@ -142,7 +142,7 @@
               <ul class="py-6 mb-6 border-y border-neutral-300 dark:border-neutral-dark-300">
                 <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
                 <li class="relative"><a href="about.html" class="menu-item">About Us</a></li>
-                <!-- <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li> -->
+                <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li>
                 <li class="relative"><a href="coming-soon.html" class="menu-item">Certification</a></li>
               </ul>
               <!-- <div class="flex flex-wrap flex-col mt-4">
@@ -226,9 +226,7 @@
     <div class="container px-4">
       <h1 class="heading-1"><span class="font-light">The </span>GeNext<span class="font-light"> Team </span></h1>
       <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
-        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext Certification is
-          tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months, you're
-          eligible. </p>
+        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext is founded and run by the team behind Future Of Earth each bringing theri unique skills and talents to ....</p>
 
       </div>
 
@@ -241,14 +239,18 @@
             class="w-full relative z-2 text-center flex flex-col justify-center content-center justify-items-center justify-self-center items-center">
             <div
               class="w-36 h-36 rounded-full border-4 border-neutral-0 dark:border-neutral-dark-300 overflow-hidden mb-8">
-              <img src="assets/imgs/avatar/avatar-12.png" />
+              <img src="assets/imgs/avatar/vandy.webp" />
             </div>
             <div class="flex-col justify-start items-center gap-4 inline-flex">
-              <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
-                href="vandy.html">Vandy</a>
-              <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
+              <!-- <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="vandy.html">Vandy</a> -->
+                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="vandy.html">Vandy</div>
+                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="vandy.html">Managing Director</div>
+              <!-- <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
                 involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
-                generate</div>
+                generate</div> -->
 
             </div>
           </div>
@@ -261,14 +263,18 @@
             class="w-full relative z-2 text-center flex flex-col justify-center content-center justify-items-center justify-self-center items-center">
             <div
               class="w-36 h-36 rounded-full border-4 border-neutral-0 dark:border-neutral-dark-300 overflow-hidden mb-8">
-              <img src="assets/imgs/avatar/avatar-01.webp" />
+              <img src="assets/imgs/avatar/jim.webp" />
             </div>
             <div class="flex-col justify-start items-center gap-4 inline-flex">
-              <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
-                href="james.html">James</a>
-              <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
+              <!-- <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="james.html">James</a> -->
+                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="vandy.html">James</div>
+                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="vandy.html">Founder</div>
+              <!-- <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
                 involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
-                generate</div>
+                generate</div> -->
             </div>
           </div>
         </div>
@@ -280,14 +286,18 @@
             class="w-full relative z-2 text-center flex flex-col justify-center content-center justify-items-center justify-self-center items-center">
             <div
               class="w-36 h-36 rounded-full border-4 border-neutral-0 dark:border-neutral-dark-300 overflow-hidden mb-8">
-              <img src="assets/imgs/avatar/avatar-02.webp" />
+              <img src="assets/imgs/avatar/deb.webp" />
             </div>
             <div class="flex-col justify-start items-center gap-4 inline-flex">
-              <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
-                href="deb.html">Deb</a>
-              <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
+              <!-- <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="deb.html">Deb</a> -->
+                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold"
+                href="vandy.html">Deb</div>
+                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold"
+                href="vandy.html">Head Of Research</div>
+              <!-- <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
                 involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
-                generate</div>
+                generate</div> -->
             </div>
           </div>
         </div>
