--- a/certification-beyond.html
+++ b/certification-beyond.html
@@ -32,7 +32,7 @@
 
 
                 <li class="relative"><a href="about.html" class="menu-item">About Us</a></li>
-                <!-- <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li> -->
+                <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li>
                 <li class="relative"><a href="coming-soon.html" class="menu-item">Certification</a></li>
                 <!-- <li class="relative"><a href="page-contact.html" class="menu-item">Contact</a></li> -->
             </ul>
@@ -125,7 +125,7 @@
                             <ul class="py-6 mb-6 border-y border-neutral-300 dark:border-neutral-dark-300">
                                 <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
                                 <li class="relative"><a href="about.html" class="menu-item">About Us</a></li>
-                                <!-- <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li> -->
+                                <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li>
                                 <li class="relative"><a href="coming-soon.html" class="menu-item">Certification</a></li>
                             </ul>
                             <!-- <div class="flex flex-wrap flex-col mt-4">
