--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
         <li class="relative"><a href="about.html" class="menu-item">About Us</a></li>
-        <!-- <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li> -->
+        <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li>
         <li class="relative"><a href="coming-soon.html" class="menu-item">Certification</a></li>
         <!-- <li class="relative"><a href="page-contact.html" class="menu-item">Contact</a></li> -->
       </ul>
@@ -141,7 +141,7 @@
               <ul class="py-6 mb-6 border-y border-neutral-300 dark:border-neutral-dark-300">
                 <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
                 <li class="relative"><a href="about.html" class="menu-item">About Us</a></li>
-                <!-- <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li> -->
+                <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li>
                 <li class="relative"><a href="coming-soon.html" class="menu-item">Certification</a></li>
               </ul>
               <!-- <div class="flex flex-wrap flex-col mt-4">
@@ -253,21 +253,21 @@
 
         <div class="grid md:grid-cols-1 lg:grid-cols-2 gap-x-[30px] gap-y-[65px] max-w-[850px]">
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
-            <a href="GeNext-launch.html" class="rounded-3xl overflow-hidden max-h-[606px]">
+            <a href="why-busines-certification-matters.html" class="rounded-3xl overflow-hidden max-h-[606px]">
               <img src="assets/imgs/pages/launch.webp" />
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
                 
                 <div class="justify-start items-center gap-2 flex">
-                  <img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.webp" />
+                  <img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/vandy.webp" />
                   <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700">
-                    James Murphy - April 22, 2025
+                    Vandy Sengupta - May 5, 2025
                   </div>
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                  href="GeNext-launch.html">This Earth day, GeNext Launches</a></h3>
+                  href="why-busines-certification-matters.html">Why Business Certification Based on Culture, Community, and Customers Matters for UK Small Businesses</a></h3>
             </div>
           </div>
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
