--- a/about.html
+++ b/about.html
@@ -226,7 +226,8 @@
     <div class="container px-4">
       <h1 class="heading-1"><span class="font-light">The </span>GeNext<span class="font-light"> Team </span></h1>
       <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
-        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext is founded and run by the team behind Future Of Earth each bringing theri unique skills and talents to ....</p>
+        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext is founded and run
+          by the team behind Future Of Earth each bringing theri unique skills and talents to ....</p>
 
       </div>
 
@@ -244,13 +245,11 @@
             <div class="flex-col justify-start items-center gap-4 inline-flex">
               <!-- <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
                 href="vandy.html">Vandy</a> -->
-                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
-                href="vandy.html">Vandy</div>
-                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
-                href="vandy.html">Managing Director</div>
-              <!-- <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
-                involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
-                generate</div> -->
+              <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold" href="vandy.html">
+                Vandy</div>
+              <!-- <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold" href="vandy.html">
+                Managing Director</div> -->
+              <div class="text-center text-neutral-700 text-base font-medium leading-normal">Vandy oversees daily operations and strategic direction at GeNext, ensuring continued growth, strong partnerships, and successful delivery of our certification programme.</div>
 
             </div>
           </div>
@@ -268,13 +267,11 @@
             <div class="flex-col justify-start items-center gap-4 inline-flex">
               <!-- <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
                 href="james.html">James</a> -->
-                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
-                href="vandy.html">James</div>
-                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
-                href="vandy.html">Founder</div>
-              <!-- <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
-                involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
-                generate</div> -->
+              <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold" href="vandy.html">
+                James</div>
+              <!-- <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold" href="vandy.html">
+                Founder</div> -->
+              <div class="text-center text-neutral-700 text-base font-medium leading-normal">James founded GeNext after leading several international award programmes, bringing deep expertise in business excellence, organisational culture, and impact measurement.</div>
             </div>
           </div>
         </div>
@@ -291,13 +288,11 @@
             <div class="flex-col justify-start items-center gap-4 inline-flex">
               <!-- <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
                 href="deb.html">Deb</a> -->
-                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold"
-                href="vandy.html">Deb</div>
-                <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold"
-                href="vandy.html">Head Of Research</div>
-              <!-- <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
-                involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
-                generate</div> -->
+              <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold" href="vandy.html">
+                Deb</div>
+              <!-- <div class="text-center text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold" href="vandy.html">
+                Head Of Research</div> -->
+              <div class="text-center text-neutral-700 text-base font-medium leading-normal">Deb leads research at GeNext, working closely with businesses to refine our methodology and ensure it remains evidence-based, relevant, and impactful.</div>
             </div>
           </div>
         </div>
