--- a/coming-soon.html
+++ b/coming-soon.html
@@ -136,7 +136,7 @@
               <ul class="py-6 mb-6 border-y border-neutral-300 dark:border-neutral-dark-300">
                 <li><a class="menu-mobile-item" href="index.html">About</a></li>
                 <li><a class="menu-mobile-item" href="about.html">About</a></li>
-                <!-- <li><a class="menu-mobile-item" href="about.html">Latest News & Stories</a></li> -->
+                <li><a class="menu-mobile-item" href="about.html">Latest News & Stories</a></li>
                 <li><a class="menu-mobile-item" href="coming-soon.html">Certification</a></li>
               </ul>
               <!-- <div class="flex flex-wrap flex-col mt-4">
