--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <div class="justify-start items-center gap-2 flex">
                   <img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/vandy.webp" />
                   <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700">
-                    Vandy Sengupta - May 5, 2025
+                    Vandy - May 5, 2025
                   </div>
                 </div>
               </div>
@@ -280,7 +280,7 @@
                 <div class="justify-start items-center gap-2 flex">
                   <img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-02.webp" />
                   <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700">
-                   Dr Debashish Sengupta - April 4, 2025
+                   Deb - April 4, 2025
                   </div>
                 </div>
               </div>
@@ -298,7 +298,7 @@
                 
                 <div class="justify-start items-center gap-2 flex">
                   <img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.webp" />
-                  <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700">James Murphy - July 4, 2024</div>
+                  <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700">James - July 4, 2024</div>
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
@@ -315,7 +315,7 @@
                 
                 <div class="justify-start items-center gap-2 flex">
                   <img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.webp" />
-                  <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700">James Murphy - July 4, 2024</div>
+                  <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700">James - July 4, 2024</div>
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
